--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-/*
 *{
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
 }
-*/
 
 #container{
   width: 84%;
@@ -17,7 +15,7 @@
 header {
    position:relative;
    height: 8rem;
-   background: #ff0000;
+   background: #000080;
    box-shadow: 0 4px 0.3125rem rgba(0,0,0,.3);
  }
 
@@ -26,12 +24,12 @@ header {
     top: 3rem;
     left: 3rem;
     font-size: 2rem;
-    color: yellow;
+    color: white;
   }
 
 nav {
   padding: 1rem 3rem ;
-  background: #ff0000;
+  background: #ffff00;
 }
 
   nav ul{
@@ -44,7 +42,7 @@ nav {
   }
 
   nav ul li a {
-    color: yellow;
+    color: #000080;
   }
 
 main{
@@ -63,6 +61,7 @@ main{
       padding: 1rem;
       margin-bottom: 2rem;
       background: #FFF;
+	  color: #000080;
     }
 
   aside{
@@ -74,6 +73,13 @@ main{
 footer {
   padding: 2rem 3rem;
   text-align: center;
-  background: #ff0000;
-  color: yellow;
+  background: #000080;
+  color: #ffff00;
 }
+
+/*
+h1 {
+    background-color: red;
+    color : white;
+}
+*/
